src/components/QuranReader/SidebarNavigation/SidebarNavigation.module.scss
@use 'src/styles/constants';
@use 'src/styles/breakpoints';
@use 'src/styles/theme';
@use 'sass:math';

$navbar-height: var(--navbar-container-height);

// Homepage heights (without sections menu and without progress bar)
$top-menu-height-home: $navbar-height;
$context-menu-height-home: 0;

// Non-homepage heights (with sections menu and progress bar)
$top-menu-height: calc(var(--context-menu-container-height) + $navbar-height);
$context-menu-height: calc(var(--context-menu-container-height) + $navbar-height);

$isNavbarVisible: var(--isNavbarVisible);

@mixin sidebarVisible {
  z-index: var(--z-index-sticky);
  transform: translateX(0%);
}

@mixin sidebarInvisibleExpanded {
  &[data-is-homepage='true'] {
    transform: translateX(-100%) translateY($top-menu-height-home);
    [dir='rtl'] & {
      transform: translateX(100%) translateY($top-menu-height-home);
    }

    @include breakpoints.smallerThanTablet {
      // TODO: we should add the banner height here if it's shown
      // transform: translateX(-100%) translateY(calc($top-menu-height-home + var(--banner-height)));
      transform: translateX(-100%) translateY(calc($top-menu-height-home));
      [dir='rtl'] & {
        // transform: translateX(100%) translateY(calc($top-menu-height-home + var(--banner-height)));
        transform: translateX(100%) translateY(calc($top-menu-height-home));
      }
    }
  }

  &[data-is-homepage='false'] {
    transform: translateX(-100%) translateY($top-menu-height);
    [dir='rtl'] & {
      transform: translateX(100%) translateY($top-menu-height);
    }

    @include breakpoints.smallerThanTablet {
      // TODO: we should add the banner height here if it's shown
      // transform: translateX(-100%) translateY(calc($top-menu-height + var(--banner-height)));
      transform: translateX(-100%) translateY($top-menu-height);
      [dir='rtl'] & {
        // transform: translateX(100%) translateY(calc($top-menu-height + var(--banner-height)));
        transform: translateX(100%) translateY($top-menu-height);
      }
    }
  }
}

@mixin sidebarInvisibleCollapsed {
  &[data-is-homepage='true'] {
    transform: translateX(-100%) translateY($top-menu-height-home);
    [dir='rtl'] & {
      transform: translateX(100%) translateY($top-menu-height-home);
    }

    @include breakpoints.smallerThanTablet {
      // TODO: we should add the banner height here if it's shown
      // transform: translateX(-100%) translateY(calc($top-menu-height-home + var(--banner-height)));
      transform: translateX(-100%) translateY($top-menu-height-home);
      [dir='rtl'] & {
        // transform: translateX(100%) translateY(calc($top-menu-height-home + var(--banner-height)));
        transform: translateX(100%) translateY($top-menu-height-home);
      }
    }
  }

  &[data-is-homepage='false'] {
    transform: translateX(-100%) translateY($top-menu-height);
    [dir='rtl'] & {
      transform: translateX(100%) translateY($top-menu-height);
    }
  }
}

.container {
  --sidebar-size: calc(100% - calc(1.5 * var(--spacing-mega)));
  @include breakpoints.tablet {
    --sidebar-size: calc(10 * var(--spacing-mega));
  }
  block-size: 100vh;
  max-block-size: 100vh;
  position: fixed;
  inset-block-start: 0;
  inset-inline-start: 0;
  padding-block-start: calc(1.5 * var(--spacing-mega));
  background-color: var(--color-background-elevated);
  overflow-x: hidden;
  z-index: var(--z-index-sticky);
  box-sizing: border-box;
  border-inline-end: 1px solid var(--color-borders-hairline);
  inline-size: var(--sidebar-size);
  padding-inline: var(--spacing-large);
  transition: transform var(--transition-regular), height var(--transition-regular);
  display: flex;
  flex-direction: column;
  overflow-y: hidden;
}

.inVisibleContainer {
  @include sidebarInvisibleExpanded();
}

.inVisibleContainerCollapsed {
  @include sidebarInvisibleCollapsed();
}

.visibleContainer {
  @include sidebarVisible();

  &[data-is-homepage='true'] {
    transform: translateY($top-menu-height-home);
    [dir='rtl'] & {
      transform: translateY($top-menu-height-home);
    }
  }

  &[data-is-homepage='false'] {
    transform: translateY($top-menu-height);
    [dir='rtl'] & {
      transform: translateY($top-menu-height);
    }

    @include breakpoints.smallerThanTablet {
      // TODO: we should add the banner height here if it's shown
      // transform: translateY(calc($top-menu-height + var(--banner-height)));
      transform: translateY($top-menu-height);
      [dir='rtl'] & {
        // transform: translateY(calc($top-menu-height + var(--banner-height)));
        transform: translateY($top-menu-height);
      }
    }
  }
}

.visibleContainerCollapsed {
  @include sidebarVisible();

  &[data-is-homepage='true'] {
    transform: translateY($context-menu-height-home);
    [dir='rtl'] & {
      transform: translateY($context-menu-height-home);
    }
  }

  &[data-is-homepage='false'] {
    transform: translateY($context-menu-height);
    [dir='rtl'] & {
      transform: translateY($context-menu-height);
    }
  }
}

.containerAuto {
  @include breakpoints.tablet {
    @include sidebarVisible();

    &[data-is-homepage='true'] {
      transform: translateY($top-menu-height-home);
      [dir='rtl'] & {
        transform: translateY($top-menu-height-home);
      }
    }

    &[data-is-homepage='false'] {
      transform: translateY($top-menu-height);
      [dir='rtl'] & {
        transform: translateY($top-menu-height);
      }
    }
  }
}

.containerAutoCollapsed {
  @include breakpoints.tablet {
    @include sidebarVisible();

    &[data-is-homepage='true'] {
      transform: translateY($context-menu-height-home);
      [dir='rtl'] & {
        transform: translateY($context-menu-height-home);
      }
    }

    &[data-is-homepage='false'] {
      transform: translateY($context-menu-height);
      [dir='rtl'] & {
        transform: translateY($context-menu-height);
      }
    }
  }
}

.header {
  display: flex;
  align-items: center;
}
.switchContainer {
  flex: 1;
  margin-inline-end: var(--spacing-xxsmall);
}

.contentContainer {
  margin-block-start: var(--spacing-medium);
  flex: 1;
  display: flex;
  flex-direction: column;
  padding-block-end: var(--spacing-medium);
}
.surahBodyContainer {
  display: flex;
  flex: 1;
  min-block-size: 0;
  overflow: hidden;
}

.scrollableSectionContainer {
  display: flex;
  flex-direction: column;
  flex: 1;
  position: relative;
}

.listContainer {
  flex: 1;
  position: relative;
}

.list {
  position: absolute;
  inset: 0;
  overflow-x: hidden;
  overflow-y: auto;
  padding-block-end: calc(2 * var(--spacing-mega));
}

.listItem {
  [dir='rtl'] & {
    direction: rtl;
  }
  padding: var(--spacing-xsmall);
  border-radius: var(--border-radius-rounded);
  &:hover {
    background-color: var(--color-background-alternative-faded);
  }
}
.selectedItem {
  font-weight: var(--font-weight-bold);
  background-color: var(--color-background-alternative-faded);
}

.surahListContainer {
  flex: 2;
  display: flex;
  flex-direction: column;
  position: relative;
}
.verseListContainer {
  flex: 1;
  display: flex;
  flex-direction: column;
  position: relative;
}

.searchInput {
  border: none;
  box-sizing: border-box;
  padding: var(--spacing-xsmall) var(--spacing-xsmall);
  border-radius: var(--border-radius-rounded);
  margin-block-end: var(--spacing-medium);
  inline-size: 100%;
  background-color: var(--color-background-alternative-faded);
  color: var(--color-text-default);
  &::placeholder {
    color: var(--color-text-default);
    opacity: var(--opacity-50);
  }
}

.spaceOnTop {
  &[data-is-homepage='true'] {
    transform: translateY($top-menu-height-home);
    block-size: calc(100vh - $top-menu-height-home);

    @include breakpoints.smallerThanTablet {
      // TODO: we should add the banner height here if it's shown
      // transform: translateY(calc($top-menu-height-home + var(--banner-height)));
      transform: translateY($top-menu-height-home);
      block-size: 100vh;
    }
  }
}

.spaceOnTopCollapsed {
  &[data-is-homepage='true'] {
    transform: translateY($top-menu-height-home);
    block-size: 100vh;

    @include breakpoints.smallerThanTablet {
      // TODO: we should add the banner height here if it's shown
      // transform: translateY(calc($top-menu-height-home + var(--banner-height)));
      transform: translateY($top-menu-height-home);
      block-size: 100vh;
    }
  }
}

.chapterNumber {
  display: inline-block;
  inline-size: calc(2 * var(--spacing-medium));
}

.tip {
  margin-block: var(--spacing-medium);
  display: none;
  @include breakpoints.tablet {
    display: block;
  }
  & > span {
    font-style: italic;
    color: var(--color-text-default);
    opacity: var(--opacity-50);
    margin-inline-end: var(--spacing-xsmall);
  }
}

.revelationOrderHeader {
  display: flex;
  flex-direction: row-reverse;
  margin-block-end: var(--spacing-micro);
}

